--- a/index.html
+++ b/index.html
@@ -1,36 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Password Generator</h1>
-      </header> 
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
-          <button id="copy" class="btn">Copy to Clipboard</button>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Password Generator</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Password Generator</h1>
+    </header>
+    <div class="card">
+      <div class="card-header">
+        <h2>Generate a Password</h2>
+      </div>
+      <div class="card-body">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="lowerChoice">
+          <label class="form-check-label" for="defaultCheck1">
+            LowerCase
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="upperChoice">
+          <label class="form-check-label" for="defaultCheck2">
+            UpperCase
+          </label>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="numberChoice">
+            <label class="form-check-label" for="defaultCheck3">
+              Numbers
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="symbolChoice">
+            <label class="form-check-label" for="defaultCheck4">
+              Symbols
+            </label>
+          </div>
+          <div>
+            <input id="length">Password length (between 8 and 128 characters).</input>
+          </div>
         </div>
       </div>
+      <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
     </div>
-    <script src="script.js"></script>
-  </body>
+    <div class="card-footer">
+      <button id="generate" class="btn">Generate Password</button>
+      <button id="copy" class="btn">Copy to Clipboard</button>
+
+    </div>
+  </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+
 </html>
