--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
       </div>
       <div class="card-body">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="lowerChoice">
+          <input class="form-check-input" type="checkbox" value="" id="lowerChoice" checked />
           <label class="form-check-label" for="defaultCheck1">
             LowerCase
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="upperChoice">
+          <input class="form-check-input" type="checkbox" value="" id="upperChoice" checked/>
           <label class="form-check-label" for="defaultCheck2">
             UpperCase
           </label>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="numberChoice">
+            <input class="form-check-input" type="checkbox" value="" id="numberChoice" checked/>
             <label class="form-check-label" for="defaultCheck3">
               Numbers
             </label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="symbolChoice">
+            <input class="form-check-input" type="checkbox" value="" id="symbolChoice"checked/>
             <label class="form-check-label" for="defaultCheck4">
               Symbols
             </label>
           </div>
           <div>
-            <input id="length">Password length (between 8 and 128 characters).</input>
+            <input type = "number" id="length" min="8" max="128" value = "128" Password length (between 8 and 128 characters)./>
           </div>
         </div>
       </div>
-      <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+      <textarea id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
     </div>
     <div class="card-footer">
       <button id="generate" class="btn">Generate Password</button>
