pass length label

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             </label>
           </div>
           <div>
-            <input type = "number" id="length" min="8" max="128" value = "12" Password length (between 8 and 128 characters)./>
+            <input type = "number" id="length" min="8" max="128" value = "12"/>
+            <label class = "number-length">Password length (between 8 and 128 characters).</label>
           </div>
         </div>
       </div>
